Code cleanup, thanks mandy!